src/S1414j.java
/* Generated By:JavaCC: Do not edit this line. S1414j.java */
import java.io.*;
import java.util.ArrayList;
import java.util.HashMap;
class S1414j implements S1414jConstants {
  private PrintWriter outFile;
  private S1414jSymTab st;
  private S1414jCodeGen cg;
  //-----------------------------------------
  public static void main(String[] args) throws
                                             IOException
  {
    System.out.println("S1414j compiler written by Hung PHAN, Shir Lie Ooi, Sen Shen");

    if (args.length != 1)
    {
      System.err.println("Wrong number cmd line args");
      System.exit(1);
    }

    // build input and output file names
    String inFileName = args[0] + ".s";
    String outFileName = args[0] + ".a";

    // construct file objects
    FileInputStream inFile =
                       new FileInputStream(inFileName);
    PrintWriter outFile = new PrintWriter(outFileName);

    // identify compiler/author in output file
    outFile.println("; from S1414j compiler written by Hung PHAN, Shir Lie Ooi, Sen Shen");

    // construct objects that make up compiler
    S1414jSymTab st = new S1414jSymTab();
    S1414jCodeGen cg = new S1414jCodeGen(outFile, st);
    S1414j parser = new S1414j(inFile);

    // initialize parser's instance variables
    parser.outFile = outFile;
    parser.st = st;
    parser.cg = cg;

    try
    {
      parser.program();
    }
    catch(ParseException e)
    {
      System.err.println(e.getMessage());
      outFile.println(e.getMessage());
      outFile.close();
      System.exit(1);
    }

    outFile.close();
  }
  //-----------------------------------------
  // If COMMON_TOKEN_ACTION is true, the token manager 
  // calls makeComment for each token to create the
  // token trace.
  //
  public void makeComment(Token t)
  {
    outFile.printf(
      "; kd=%3d bL=%3d bC=%3d eL=%3d eC=%3d im= %s%n",
       t.kind, t.beginLine, t.beginColumn, t.endLine,
       t.endColumn, t.image);
  }

  // second makeComment method
  public void makeComment(Token t1, Token t2)
  {
        outFile.print("; "); // start comment
        while (t1 != t2)
        {
                outFile.print(t1.image + " ");
                t1 = t1.next;
        }
        outFile.println(); // terminate comment
  }

  //third makeComment method
  public void makeComment(String s)
  {
        outFile.println("; " + s);
  }

// Translation grammar for S1414j and S1 ==================
  final public void program() throws ParseException {
    statementList();
    cg.endCode();
    jj_consume_token(0);
  }

//------------------------------
  final public void statementList() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PRINTLN:
    case PRINT:
    case READINT:
    case VAR_INCREMENT:
    case VAR_DECREMENT:
    case INCREMENT_VAR:
    case DECREMENT_VAR:
    case ID:
    case SEMICOLON:
    case LEFTBRACE:
      statement();
      statementList();
      break;
    default:
      jj_la1[0] = jj_gen;

    }
  }

//------------------------------
  final public void statement() throws ParseException {
                   Token t; boolean outComment;
         t = getToken(1);
         outComment = true;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VAR_INCREMENT:
      incrementFirstStatement();
      break;
    case INCREMENT_VAR:
      incrementThenStatement();
      break;
    case DECREMENT_VAR:
      decrementFirstStatement();
      break;
    case VAR_DECREMENT:
      decrementThenStatement();
      break;
    case ID:
      assignmentStatement();
      break;
    case PRINTLN:
      printlnStatement();
      break;
    case PRINT:
      printStatement();
      break;
    case SEMICOLON:
      nullStatement();
      break;
    case LEFTBRACE:
      compoundStatement();
            outComment = false;
      break;
    case READINT:
      readintStatement();
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
         if (outComment) makeComment(t, getToken(1));
  }

//------------------------------
  final public void incrementFirstStatement() throws ParseException {
                                 Token t;
    t = jj_consume_token(VAR_INCREMENT);
    st.enter(t.image.replaceAll("\u005c\u005c+\u005c\u005c+", ""));
    cg.emitInstruction("pc", t.image.replaceAll("\u005c\u005c+\u005c\u005c+", ""));
    cg.emitInstruction("p", t.image.replaceAll("\u005c\u005c+\u005c\u005c+", ""));
    cg.emitInstruction("pwc", "1");
    cg.emitInstruction("add");
    cg.emitInstruction("stav");
  }

//------------------------------
  final public void incrementThenStatement() throws ParseException {
                                Token t;
    t = jj_consume_token(INCREMENT_VAR);
     cg.emitInstruction("pc", t.image.replaceAll("\u005c\u005c+\u005c\u005c+", ""));
    cg.emitInstruction("p", t.image.replaceAll("\u005c\u005c+\u005c\u005c+", ""));
    cg.emitInstruction("pwc", "1");
    cg.emitInstruction("add");
    cg.emitInstruction("stav");
  }

//------------------------------
  final public void decrementFirstStatement() throws ParseException {
                                 Token t;
    t = jj_consume_token(DECREMENT_VAR);
    st.enter(t.image.replaceAll("--", ""));
    cg.emitInstruction("pc", t.image.replaceAll("--", ""));
    cg.emitInstruction("p", t.image.replaceAll("--", ""));
    cg.emitInstruction("pwc", "-1");
    cg.emitInstruction("add");
    cg.emitInstruction("stav");
  }

//------------------------------
  final public void decrementThenStatement() throws ParseException {
                                Token t;
    t = jj_consume_token(VAR_DECREMENT);
    st.enter(t.image.replaceAll("--", ""));
    cg.emitInstruction("pc", t.image.replaceAll("--", ""));
         cg.emitInstruction("p", t.image.replaceAll("--", ""));
    cg.emitInstruction("pwc", "-1");
    cg.emitInstruction("add");
    cg.emitInstruction("stav");
  }

//------------------------------
  final public void assignmentStatement() throws ParseException {
                             Token t;
    t = jj_consume_token(ID);
    st.enter(t.image);
    cg.emitInstruction("pc", t.image);;
    jj_consume_token(ASSIGN);
    assignmentTail();
    cg.emitInstruction("stav");
     cg.doIncrementAndDecrement();
  }

//------------------------------
  final public void assignmentTail() throws ParseException {
                        Token t;
    if (jj_2_1(2)) {
      t = jj_consume_token(ID);
    st.enter(t.image);
    cg.emitInstruction("pc", t.image);
      jj_consume_token(ASSIGN);
      assignmentTail();
    cg.emitInstruction("dupe");
    cg.emitInstruction("rot");
    cg.emitInstruction("stav");
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case UNSIGNED:
      case VAR_INCREMENT:
      case VAR_DECREMENT:
      case INCREMENT_VAR:
      case DECREMENT_VAR:
      case ID:
      case LEFTPAREN:
      case PLUS:
      case MINUS:
        expr();
        jj_consume_token(SEMICOLON);
        break;
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

//------------------------------
  final public void printlnStatement() throws ParseException {
    jj_consume_token(PRINTLN);
    jj_consume_token(LEFTPAREN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case UNSIGNED:
    case STRING:
    case VAR_INCREMENT:
    case VAR_DECREMENT:
    case INCREMENT_VAR:
    case DECREMENT_VAR:
    case ID:
    case LEFTPAREN:
    case PLUS:
    case MINUS:
      printArg();
      break;
    default:
      jj_la1[3] = jj_gen;

    }
    cg.emitInstruction("pc", "'\u005c\u005cn'");
    cg.emitInstruction("aout");
     cg.doIncrementAndDecrement();
    jj_consume_token(RIGHTPAREN);
    jj_consume_token(SEMICOLON);
  }

  final public void printArg() throws ParseException {
                  Token t; String label;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case STRING:
      t = jj_consume_token(STRING);
         label=cg.getLabel();
         cg.emitInstruction("pc", label);
         cg.emitInstruction("sout");
         cg.emitdw("^"+label, t.image);
      break;
    case UNSIGNED:
    case VAR_INCREMENT:
    case VAR_DECREMENT:
    case INCREMENT_VAR:
    case DECREMENT_VAR:
    case ID:
    case LEFTPAREN:
    case PLUS:
    case MINUS:
      expr();
         cg.emitInstruction("dout");
          cg.doIncrementAndDecrement();
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

//------------------------------
  final public void printStatement() throws ParseException {
    jj_consume_token(PRINT);
    jj_consume_token(LEFTPAREN);
    printArg();
    jj_consume_token(RIGHTPAREN);
    jj_consume_token(SEMICOLON);
  }

//------------------------------
  final public void nullStatement() throws ParseException {
    jj_consume_token(SEMICOLON);
  }

//------------------------------
  final public void compoundStatement() throws ParseException {
    jj_consume_token(LEFTBRACE);
    makeComment("{");
    statementList();
    jj_consume_token(RIGHTBRACE);
    makeComment("}");
  }

  final public void readintStatement() throws ParseException {
                          Token t;
    jj_consume_token(READINT);
    jj_consume_token(LEFTPAREN);
    t = jj_consume_token(ID);
    st.enter(t.image);
    cg.emitInstruction("pc", t.image);
    cg.emitInstruction("din");
    cg.emitInstruction("stav");
    jj_consume_token(RIGHTPAREN);
    jj_consume_token(SEMICOLON);
  }

//------------------------------
  final public void expr() throws ParseException {
    term();
    termList();
  }

//------------------------------
  final public void termList() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PLUS:
      jj_consume_token(PLUS);
      term();
    cg.emitInstruction("add");
      termList();
      break;
    case MINUS:
      jj_consume_token(MINUS);
      term();
    cg.emitInstruction("sub");
      termList();
      break;
    default:
      jj_la1[5] = jj_gen;

    }
  }

//------------------------------
  final public void term() throws ParseException {
    factor();
    factorList();
  }

//------------------------------
  final public void factorList() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TIMES:
      jj_consume_token(TIMES);
      factor();
    cg.emitInstruction("mult");
      factorList();
      break;
    case DIVIDE:
      jj_consume_token(DIVIDE);
      factor();
    cg.emitInstruction("div");
      factorList();
      break;
    default:
      jj_la1[6] = jj_gen;

    }
  }

//------------------------------
  final public void factor() throws ParseException {
                Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case UNSIGNED:
      t = jj_consume_token(UNSIGNED);
    cg.emitInstruction("pwc", t.image);
      break;
    case INCREMENT_VAR:
      t = jj_consume_token(INCREMENT_VAR);
    cg.emitInstruction("pc", t.image.replaceAll("\u005c\u005c+\u005c\u005c+", ""));
    cg.emitInstruction("p", t.image.replaceAll("\u005c\u005c+\u005c\u005c+", ""));
         cg.emitInstruction("pwc", "1");
         cg.emitInstruction("add");
         cg.emitInstruction("stav");
         st.enter(t.image.replaceAll("\u005c\u005c+\u005c\u005c+", ""));
    cg.emitInstruction("p", t.image.replaceAll("\u005c\u005c+\u005c\u005c+", ""));
      break;
    case DECREMENT_VAR:
      t = jj_consume_token(DECREMENT_VAR);
    cg.emitInstruction("pc", t.image.replaceAll("--", ""));
    cg.emitInstruction("p", t.image.replaceAll("--", ""));
         cg.emitInstruction("pwc", "-1");
         cg.emitInstruction("add");
         cg.emitInstruction("stav");
         st.enter(t.image.replaceAll("--", ""));
    cg.emitInstruction("p", t.image.replaceAll("--", ""));
      break;
    case ID:
      t = jj_consume_token(ID);
    st.enter(t.image);
    cg.emitInstruction("p", t.image);
      break;
    case VAR_INCREMENT:
      t = jj_consume_token(VAR_INCREMENT);
  cg.addIncrementOrDecrement(t.image.replaceAll("\u005c\u005c+\u005c\u005c+", ""),"++");
    st.enter(t.image.replaceAll("\u005c\u005c+\u005c\u005c+", ""));
    cg.emitInstruction("p", t.image.replaceAll("\u005c\u005c+\u005c\u005c+", ""));
      break;
    case VAR_DECREMENT:
      t = jj_consume_token(VAR_DECREMENT);
     cg.addIncrementOrDecrement(t.image.replaceAll("--", ""),"--");
    st.enter(t.image.replaceAll("--", ""));
    cg.emitInstruction("p", t.image.replaceAll("--", ""));
      break;
    case LEFTPAREN:
      jj_consume_token(LEFTPAREN);
      expr();
      jj_consume_token(RIGHTPAREN);
      break;
    case PLUS:
      jj_consume_token(PLUS);
      factor();
      break;
    case MINUS:
      jj_consume_token(MINUS);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case UNSIGNED:
        t = jj_consume_token(UNSIGNED);
       cg.emitInstruction("pwc", "-" + t.image);
        break;
      case ID:
        t = jj_consume_token(ID);
       st.enter(t.image);
           cg.emitInstruction("p", t.image);
       cg.emitInstruction("neg");
        break;
      case VAR_INCREMENT:
        t = jj_consume_token(VAR_INCREMENT);
        cg.addIncrementOrDecrement(t.image.replaceAll("\u005c\u005c+\u005c\u005c+", ""),"++");
       st.enter(t.image.replaceAll("\u005c\u005c+\u005c\u005c+", ""));
           cg.emitInstruction("p", t.image.replaceAll("\u005c\u005c+\u005c\u005c+", ""));
       cg.emitInstruction("neg");
        break;
      case VAR_DECREMENT:
        t = jj_consume_token(VAR_DECREMENT);
        cg.addIncrementOrDecrement(t.image.replaceAll("--", ""),"--");
       st.enter(t.image.replaceAll("-", ""));
           cg.emitInstruction("p", t.image.replaceAll("--", ""));
       cg.emitInstruction("neg");
        break;
      case INCREMENT_VAR:
        t = jj_consume_token(INCREMENT_VAR);
    cg.emitInstruction("pc", t.image.replaceAll("\u005c\u005c+\u005c\u005c+", ""));
    cg.emitInstruction("p", t.image.replaceAll("\u005c\u005c+\u005c\u005c+", ""));
         cg.emitInstruction("pwc", "1");
         cg.emitInstruction("add");
         cg.emitInstruction("stav");
           st.enter(t.image.replaceAll("\u005c\u005c+\u005c\u005c+", ""));
           cg.emitInstruction("p", t.image.replaceAll("\u005c\u005c+\u005c\u005c+", ""));
       cg.emitInstruction("neg");
        break;
      case DECREMENT_VAR:
        t = jj_consume_token(DECREMENT_VAR);
    cg.emitInstruction("pc", t.image.replaceAll("--", ""));
    cg.emitInstruction("p", t.image.replaceAll("--", ""));
         cg.emitInstruction("pwc", "-1");
         cg.emitInstruction("add");
         cg.emitInstruction("stav");
    st.enter(t.image.replaceAll("--", ""));
    cg.emitInstruction("p", t.image.replaceAll("--", ""));
    cg.emitInstruction("neg");
        break;
      case LEFTPAREN:
        jj_consume_token(LEFTPAREN);
        expr();
        jj_consume_token(RIGHTPAREN);
       cg.emitInstruction("neg");
        break;
      case PLUS:
        label_1:
        while (true) {
          jj_consume_token(PLUS);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case PLUS:
            ;
            break;
          default:
            jj_la1[7] = jj_gen;
            break label_1;
          }
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case MINUS:
          jj_consume_token(MINUS);
          factor();
          break;
        case UNSIGNED:
        case VAR_INCREMENT:
        case VAR_DECREMENT:
        case INCREMENT_VAR:
        case DECREMENT_VAR:
        case ID:
        case LEFTPAREN:
        case PLUS:
          factor();
          cg.emitInstruction("neg");
          break;
        default:
          jj_la1[8] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      case MINUS:
        jj_consume_token(MINUS);
        factor();
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_3_1() {
    if (jj_scan_token(ID)) return true;
    if (jj_scan_token(ASSIGN)) return true;
    return false;
  }

  /** Generated Token Manager. */
  public S1414jTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private Token jj_scanpos, jj_lastpos;
  private int jj_la;
  private int jj_gen;
  final private int[] jj_la1 = new int[11];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x102f9c0,0x102f9c0,0x34fa00,0x34fe00,0x34fe00,0x300000,0xc00000,0x100000,0x34fa00,0x34fa00,0x34fa00,};
   }
  final private JJCalls[] jj_2_rtns = new JJCalls[1];
  private boolean jj_rescan = false;
  private int jj_gc = 0;

  /** Constructor with InputStream. */
  public S1414j(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public S1414j(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new S1414jTokenManager(this, jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 11; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }
